gcc/testsuite/gdc.test/runnable/imports/test46c.d
module imports.test46c;

class C(T)
{
    void foo() { }
} 

