gcc/testsuite/gdc.test/fail_compilation/imports/deprecatedImportb.d
alias AliasSeq(T...) = T;

void foo() {}

void bar(T)(T t) {}

enum E = 2;

struct S {}

class C {}

interface I {}
